--- a/style.css
+++ b/style.css
@@ -1,53 +1,49 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   text-decoration: none;
   list-style: none;
   color: black;
 }
 
-.outer-container {
-  width: 100%;
+.container {
   max-width: 1440px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
-  position: relative;
   margin: auto;
-  border: 1px solid black;
+  position: relative;
+  /* overflow: hidden; */
 }
 
 .Hero {
-  display: flex;
-  flex-wrap: wrap;
+  position: relative;
+  background-image: url(assets/a.svg);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain;
+  background-position-y: top;
   width: 100%;
+  /* margin-bottom: 250px; */
 }
 .toggle {
   display: none;
 }
 .top-nav {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   margin: 20px;
 }
-.logo {
-  width: 30%;
-}
+
 .nav-list {
-  position: relative;
   width: 70%;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: space-between;
   flex-wrap: wrap;
-  gap: 20px;
+  align-items: center;
+}
+.active {
   left: 0%;
 }
-
 .signup-btn {
   padding: 10px;
   background: transparent;
@@ -58,37 +54,73 @@
   background: transparent;
   border: none;
 }
-.active {
-  left: 100%;
-  display: none;
-}
-
-.Hero-content {
-  width: 100%;
+.enjoy {
   position: relative;
+  z-index: 1;
+}
+.enjoy #decore {
+  position: absolute;
+  width: 100%;
+  top: 100px;
+  left: 0px;
+  z-index: -1;
+}
+.Hero-content {
+  height: 500px;
+  margin:120px 20px;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
-  flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
+  position: relative;
+  flex-wrap: wrap;
 }
 .description {
   width: 48%;
-  /* height: 100%; */
+  position: relative;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
-  margin: auto;
+  margin-block: auto;
 }
+.description #heading {
+  font-size: 2rem;
+}
+.description #tagline {
+  color: #df6951;
+  font-weight: 700;
+}
+.description #para{
+  font-size: 16px ;
+}
+.hero-img {
+  top: -50%;
+  width: 48%;
+  position: relative;
+}
+#traveller {
+  width: 100%;
+  position: absolute;
+}
+
+#plane1 {
+  position: absolute;
+  top: -30px;
+  left: 0;
+}
+
+#plane2 {
+  width: 50%;
+  position: absolute;
+  display: none;
+}
+
 .cta {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
 }
-.cta > a {
+.cta > div {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -101,103 +133,32 @@
   color: white;
   border: none;
 }
-.description h1 {
-  font-family: Volkhov;
-  font-size: 84px;
-  font-weight: 700;
-  line-height: 89px;
-  letter-spacing: -0.04em;
-  text-align: left;
-  color: #181e4b;
-}
-
-.description > #para {
-  font-family: Poppins;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 30px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #5e6282;
-}
-
-#tagline {
-  font-family: Poppins;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 30px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #df6951;
-}
-
-.hero-img {
-  width: 50%;
-  height: 100%;
-  display: flex;
-  position: relative;
-}
-#plane1 {
-  position: absolute;
-  /* top: 150.43px;
-  left: 698px; */
-  padding: 0px, 0px, 0px, 0px;
-  angle: 31.84 deg;
-}
-#plane2 {
-  position: absolute;
-  /* top: 280.43px;
-  left: 1205px; */
-  padding: 0px, 0px, 0px, 0px;
-  angle: 31.84 deg;
-  z-index: 0;
-  /* display: none; */
-}
-#traveller {
-  position: absolute;
-  /* top: 105px; */
-  /* left: 565px; */
-  z-index: 2;
-}
-
 .decore {
   position: absolute;
-  right: 0;
+  width: 100%;
   z-index: -2;
+  top: 0;
+  left: 45%;
 }
 
 .Services {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-  margin: 20% 20px 0px 20px;
+  text-align: center;
+  margin-bottom: 100px;
 }
 
 .category-container {
-  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .categorys {
   width: 150px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
-  text-align: center;
   background-color: white;
   border-radius: 25px;
-  padding: 20px;
-  border: none;
-  z-index: 1;
+  padding: 10px;
 }
+
 #category-text {
   font-family: Poppins;
   font-size: 18px;
@@ -205,42 +166,40 @@
   letter-spacing: 0em;
   text-align: center;
 }
+
 #offer {
   font-family: Volkhov;
-  font-size: 50px;
+  font-size: 2rem;
   font-weight: 700;
   line-height: 65px;
   letter-spacing: 0em;
   text-align: center;
 }
-#crect {
+
+.categorys > div {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.flight-active {
   position: relative;
-  top: -60px;
-  left: -280px;
+}
+
+#crect {
+  position: absolute;
+  top: 220px;
+  left: -20px;
   z-index: -1;
 }
 
 .destinations {
-  position: relative;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
 }
-
-.destination-list {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
-  margin-block: 20px;
-  gap: 30px;
-}
-
 .destinations #heading {
   font-family: Volkhov;
-  font-size: 50px;
+  font-size: 2rem;
   font-weight: 700;
   line-height: 65px;
   letter-spacing: 0em;
@@ -249,65 +208,83 @@
 
 .destinations #subheading {
   font-family: Poppins;
-  font-size: 18px;
+  font-size: 1rem;
   margin-bottom: 0px;
   font-weight: 600;
   line-height: 27px;
   letter-spacing: 0em;
   color: #5e6282;
 }
-
+.destination-list {
+  display: flex;
+  flex-wrap: wrap;
+}
 .destination {
+  width: 33%;
   position: relative;
-  width: 315px;
-  height: 457px;
-  border-radius: 24px;
-  background-position-x: center;
+  margin: auto;
 }
-.one {
-  background-image: url(assets/destination-2.svg);
+.destination > img {
+  width: 100%;
 }
-.two {
-  background-image: url(assets/destination-3.svg);
-}
-.three {
-  background-image: url(assets/destination-1.svg);
-}
+
 .destination > div {
   position: absolute;
-  background-color: #ffffff;
-  bottom: 0;
-  width: 100%;
-  border-top: none;
-  border-radius: 0px 0px 24px 24px;
-  padding-top: 20px;
-  box-shadow: 0px 1px 20px black;
+  width: 67.5%;
+  top: 60%;
+  left: 16%;
+  background-color: white;
+  /* padding-block: 20px; */
+  border-radius: 0px 0px 25px 25px;
   display: flex;
   flex-direction: column;
-}
-.destination .location {
-  display: flex;
-  margin: 20px;
-  justify-content: space-between;
+  gap: 25px;
+  font-size: 1rem;
 }
 
-.destination .navigation {
+.location {
+  width: 100%;
   display: flex;
-  margin: 20px;
-  align-items: end;
+  align-items: center;
+  justify-content: space-around;
+  margin-block: 20px;
+}
+.navigation {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
 }
 
 .book-trip {
-  width: 100%;
   display: flex;
-  flex-direction: row-reverse;
-  flex-wrap: wrap;
   align-items: center;
+  flex-direction: row-reverse;
   justify-content: center;
 }
 
-.book-trip .desc {
-  width: 48%;
+.book-trip .img img {
+  width: 100%;
+}
+
+.values {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
+}
+.value {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 20px;
+}
+
+.value > div {
+  width: 80%;
 }
 
 .book-trip p {
@@ -323,120 +300,99 @@
 
 .book-trip #heading {
   font-family: Volkhov;
-  font-size: 50px;
+  font-size: 2rem;
   font-weight: 700;
   line-height: 65px;
   letter-spacing: 0em;
   text-align: left;
   color: black;
 }
-.book-trip .values {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-.book-trip .value {
-  display: flex;
-}
-.book-trip .value p {
-  margin-left: 20px;
-}
 
 .testimonals-section {
-  width: 100%;
-  position: relative;
+  margin-top: 100px;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
   flex-wrap: wrap;
-  gap: 10px;
+  justify-content: center;
+  margin: 20px;
 }
+
+.testimonals-section #card-container {
+  display: flex;
+}
+.testimonals-section > .desc,
+.cards {
+  width: 50%;
+}
+
+.testimonals-section > .desc {
+  margin-top: 0;
+}
+
 .testimonals-section #title {
   font-size: 32px;
   font-weight: 700;
   width: 300px;
 }
-.cards {
-  position: relative;
-  margin-left: 180px;
-}
-.card-1 {
-  position: relative;
-  top: 30%;
-  left: 15%;
-  padding: 10px;
-  background-color: #ffffff;
-  border-radius: 5px;
-  z-index: 1;
-  box-shadow: 0px 10px 20px rgb(180, 180, 180);
-}
 
-.card-2 {
-  position: relative;
-  bottom: -170%;
-  left: 20%;
-  padding: 10px;
-  border-radius: 5px;
-  border: 2px solid rgb(243, 243, 243);
-}
 .elipse {
+  margin-top: 50px;
   display: flex;
-  position: absolute;
-  width: 100px;
-  top: 200px;
-  margin-left: 20px;
+  width: 20%;
   justify-content: space-between;
 }
-.pagination {
+
+.testimonals-section .cards {
+  display: flex;
+  position: relative;
+}
+.testimonals-section .cards #logo {
   position: absolute;
-  top: 50%;
-  right: -20%;
+  top: -70px;
+  left: -60px;
+}
+.testimonals-section .card-1 {
+  border-radius: 25px;
+  padding: 20px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 20px;
+  box-shadow: 0 20px 20px rgb(173, 173, 173);
+}
+
+.testimonals-section > .card-container {
+  position: relative;
+}
+.testimonals-section .card-2 {
+  position: absolute;
+  width: 73%;
+  /* border: 1px solid rgb(190, 190, 190); */
+  border-radius: 0 0 25px 0;
+  padding: 20px;
+  left: 40px;
+  top: 100%;
+}
+.pagination {
+  margin-left: 20px;
 }
 
 .logos {
-  position: relative;
-  width: 90%;
+  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
   flex-wrap: wrap;
-}
-.subscribe-section {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
-.mask {
-  width: 100%;
-  height: 450px;
-  background-image: url(assets/Group\ 78.svg);
-  background-repeat: no-repeat;
-  position: relative;
-}
-.mask p {
-  position: absolute;
-  width: 60%;
-  top: 10%;
-  left: 15%;
-  font-family: Poppins;
-  font-size: 33px;
-  font-weight: 600;
-  line-height: 54px;
-  letter-spacing: 0em;
-  text-align: center;
-  color: #5e6282;
-}
+
 .footer {
   position: relative;
   width: 100%;
-  height: 300px;
+  min-height: 300px;
   border-radius: 17.5px;
 }
 
 .footer-list {
-  width: 100%;
   display: flex;
   justify-content: space-around;
 }
@@ -447,7 +403,10 @@
   justify-content: space-around;
   align-items: center;
 }
-
+.comapny-desk {
+  display: flex;
+  flex-direction: column;
+}
 .company-cols > div #title {
   font-weight: 600;
 }
@@ -458,6 +417,9 @@
   align-items: center;
 }
 
+.footer-list p {
+  margin-block: 20px;
+}
 #footer-title {
   font-size: 35px;
   font-weight: 700;
@@ -468,172 +430,78 @@
 #copyright {
   text-align: center;
 }
-
-.enjoy {
-  position: relative;
-  z-index: 2;
-  color: #14183e;
-}
-#decore {
-  position: absolute;
-  top: 80%;
-  z-index: -1;
-  left: 0;
+.subscribe-section {
+  margin-block: 90px;
   width: 100%;
+  position: relative;
 }
-@media screen and (max-width: 768px) {
-  .outer-container {
-    width: 100%;
-    /* overflow: hidden; */
-  }
-  .toggle {
-    display: block;
-    margin-right: 20px;
-    background: transparent;
-    border: none;
-    z-index: 6;
-  }
-
-  .logo {
-    width: 30%;
-  }
-
-  .nav-list {
-    position: absolute;
-    flex-direction: column;
-    background-color: rgba(255, 255, 255);
-    margin: 0;
-    top: 0;
-    padding: 20px 0px;
-    transition: all 0.5s;
-    width: 100%;
-    z-index: 4;
-  }
-  .Hero-content {
-    flex-direction: column;
-  }
-  .description {
-    width: 100%;
-  }
-  .description h1 {
-    text-align: center;
-    font-size: 32px;
-  }
-  .description #para,
-  #tagline {
-    text-align: center;
-  }
-  .hero-img {
-    width: 100%;
-    position: relative;
-  }
-  #plane1 {
-    position: absolute;
-    top: -50px;
-    left: -50px;
-    z-index: 1;
-  }
-  #plane2 {
-    position: absolute;
-    top: 0;
-    left: 45%;
-    z-index: 1;
-  }
-  #traveller {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: -50px;
-    z-index: 2;
-  }
-  .decore {
-    width: auto;
-  }
-  .category-container {
-    width: 100%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    margin-inline: 20px;
-    gap: 30px;
-  }
-  .categorys {
-    width: 90%;
-    flex-direction: row;
-    justify-content: start;
-    text-align: left;
-    gap: 20px;
-  }
-  #crect {
-    top: -350px;
-    left: -350px;
-  }
-  .book-trip .desc {
-    width: 98%;
-  }
-  .testimonals-section {
-    width: 100%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 150px;
-    text-align: center;
-    margin-top: 50px;
-
-  }
-  .testimonals-section > div {
-    width: 100%;
-  }
-  .testimonals-section .desc {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    left: 0;
-  }
-  .testimonals-section #card-container {
-    position: relative;
-    width: 50%;
-    margin: auto;
-    left: 0;
-  }
-  .footer-list {
-    flex-direction: column;
-    gap: 20px;
-  }
-  .cards {
-    margin-left: -50px;
-  }
-  .card-1,.card-2{
-    left: 0;
-  }
-  .company-cols {
-    width: 100%;
-    text-align: center;
-  }
-
-  .outbound {
-    align-items: center;
-  }
-
-  .footer p {
-    text-align: center;
-  }
-
-  .cp {
-    margin-top: 50px;
-  }
-  .testimonals-section #card-container {
-    left: 0;
-  }
+.mask {
+  height: 400px;
+  position: relative;
+  background-image: url(assets/Group\ 78.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 2;
+  background-color: white;
 }
 
-@media screen and (min-width: 768px) {
-  .decore {
-    position: absolute;
-    right: 0;
-  }
+.mask #input {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 20px;
+  margin-top: 50px;
+}
+#stars {
+  position: absolute;
+  right: 6%;
+  bottom: -60px;
+  z-index: -1;
+}
+#message {
+  position: absolute;
+  top: -40px;
+  right: 50px;
+  z-index: 3;
+}
+
+.mask > div > p {
+  width: 70%;
+  right: 15%;
+  top: 10%;
+  position: absolute;
+  font-family: Poppins;
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 54px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #5e6282;
+}
+
+.mask #input input {
+  padding: 10px;
+  width: 250px;
+  border: none;
+}
+
+.mask #input button {
+  padding: 20px 30px;
+  border: none;
+  color: white;
+  border-radius: 10px;
+  background: linear-gradient(180deg, #ff946d 0%, #ff7d68 100%);
+}
+
+.mask #input > div {
+  background-color: white;
+  border: 1px solid rgb(235, 235, 235);
+  border-radius: 10px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
 }
