--- a/media-768.css
+++ b/media-768.css
@@ -57,7 +57,7 @@
     }
     .cta {
       /* flex-wrap: nowrap; */
-      /* align-items: center; */
+      justify-content: center;
       position: relative;
       width: 100%;
       margin-block:20px;
@@ -102,7 +102,7 @@
   
     .destination > div {
       font-size: 0.8rem;
-      gap: 10px;
+      padding: 10px;
     }
   
     .location {
