--- a/style.css
+++ b/style.css
@@ -7,16 +7,18 @@
 }
 
 .container {
-  max-width: 1440px;
+  background-image: url(assets/a.svg);
+  background-repeat: no-repeat;
+  max-width: 1550px;
   margin: auto;
+  padding-top: 20px;
   position: relative;
-  border: 1px solid;
+  background-position: top right;
   /* overflow: hidden; */
 }
 
 .Hero {
   position: relative;
-  background-image: url(assets/a.svg);
   background-repeat: no-repeat;
   background-position: right;
   background-size: contain;
@@ -144,6 +146,7 @@
 
 .Services {
   text-align: center;
+  margin-top: 250px;
   margin-bottom: 100px;
 }
 
@@ -197,6 +200,7 @@
 
 .destinations {
   text-align: center;
+  margin-bottom: 100px;
 }
 .destinations #heading {
   font-family: Volkhov;
@@ -218,12 +222,16 @@
 }
 .destination-list {
   display: flex;
+  align-items: center;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
-.destination {
+/* .destination {
   width: 33%;
   position: relative;
   margin: auto;
+  display: flex;
+  flex-direction: column;
 }
 .destination > img {
   width: 100%;
@@ -235,12 +243,32 @@
   top: 60%;
   left: 16%;
   background-color: white;
-  /* padding-block: 20px; */
   border-radius: 0px 0px 25px 25px;
   display: flex;
   flex-direction: column;
   gap: 25px;
   font-size: 1rem;
+} */
+.destination {
+  width: 25%;
+  height: 400px;
+  position: relative;
+  border-radius: 25px;
+  box-shadow: 0 5px 10px black;
+}
+.destination > img {
+  position: relative;
+  height: 70%;
+  width: 100%;
+  object-fit: fill;
+  border-radius: 25px 25px 0 0;
+}
+
+.destination > div {
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .location {
@@ -385,6 +413,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  margin-top: 100px;
 }
 
 .footer {
@@ -475,8 +504,9 @@
 }
 
 .mask > div > p {
-  width: 70%;
-  right: 15%;
+  text-align: center;
+  max-width: 70%;
+  left: 15%;
   top: 10%;
   position: absolute;
   font-family: Poppins;
